Update git user

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Marko Samuli Kirves
-	email = marko.kirves@thisisdare.com
+	name = Marko Kirves
+	email = marko.kirves@bynd.com
 	username = markosamuli
 [alias]
 	co = checkout
