Fixed .tmux.conf for the new version, removed tmux-powerline in favor of the powerline library

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,20 +8,24 @@
 source ~/.dotfiles/tmux/tmux-colors-solarized/tmuxcolors.conf
 
 # Load tmux-powerline
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-utf8 on
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 120
-set-option -g status-left "#(~/.dotfiles/tmux/tmux-powerline/status-left.sh)"
-set-option -g status-right "#(~/.dotfiles/tmux/tmux-powerline/status-right.sh)"
+#set-option -g status on
+#set-option -g status-interval 2
+#set-option -g status-utf8 on
+#set-option -g status-justify "centre"
+#set-option -g status-left-length 60
+#set-option -g status-right-length 120
+#set-option -g status-left "#(~/.dotfiles/tmux/tmux-powerline/status-left.sh)"
+#set-option -g status-right "#(~/.dotfiles/tmux/tmux-powerline/status-right.sh)"
 
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+
+# status bar
+set-option -g status-utf8 on
 
 # http://robots.thoughtbot.com/post/19398560514/how-to-copy-and-paste-with-tmux-on-mac-os-x
 # brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Mouse stuff                                                                   
 setw -g mode-mouse on                                                           
@@ -29,18 +33,14 @@ setw -g mouse-select-window on
 setw -g mouse-select-pane on                                                    
 setw -g mouse-resize-pane on
 
-# http://blog.sanctum.geek.nz/vi-mode-in-tmux/
-set-window-option -g mode-keys vi
-
 # http://www.ur-ban.com/blog/2012/04/27/copypaste-in-tmux/
+# https://github.com/tony/tmux-config/blob/public/.tmux-osx.conf
 bind-key C-c run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind-key C-v run-shell "reattach-to-user-namespace pbpaste | tmux load-buffer - \; paste-buffer -d"
 
 # C-b is not acceptable -- Vim uses it
-unbind C-b
 set-option -g prefix C-a
-
-# C-a C-a for last active window
-bind-key C-a last-window 	
+bind-key C-a last-window	
 
 # Start Window Numbering at 1
 set -g base-index 1			
@@ -48,6 +48,23 @@ set -g base-index 1
 # Allows for faster key repetition
 set -s escape-time 0
 
-# Vim keys
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# Vi copypaste mode
+# http://blog.sanctum.geek.nz/vi-mode-in-tmux/
+#set-window-option -g mode-keys vi
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+
+# http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
