--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,8 +35,8 @@ setw -g mouse-resize-pane on
 
 # http://www.ur-ban.com/blog/2012/04/27/copypaste-in-tmux/
 # https://github.com/tony/tmux-config/blob/public/.tmux-osx.conf
-bind-key C-c run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind-key C-v run-shell "reattach-to-user-namespace pbpaste | tmux load-buffer - \; paste-buffer -d"
+# bind-key C-c run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# bind-key C-v run-shell "reattach-to-user-namespace pbpaste | tmux load-buffer - \; paste-buffer -d"
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -66,5 +66,13 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+# New window with default path set to last path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
