--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -116,7 +116,7 @@ body_split_regexp = r'\n(?=\w+\s*:)'
 ##
 ## Tags that will be used for the changelog must match this regexp.
 ##
-tag_filter_regexp = r'^v[0-9]+\.[0-9]+(\.[0-9]+)?(?:-([0-9A-Za-z-]+))?$'
+tag_filter_regexp = r'^v[0-9]+\.[0-9]+(\.[0-9]+)?(?:-([0-9A-Za-z-\.]+))?$'
 
 
 ## ``unreleased_version_label`` is a string
