--- a/.gitconfig
+++ b/.gitconfig
@@ -6,19 +6,19 @@
 [alias]
 	co = checkout
 	ci = commit
-  	g = log --oneline --decorate --color=always --graph
+  	# g = log --oneline --decorate --color=always --graph
   	pullr = pull --rebase
   	hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
-	
+
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	lg1 = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
 	lg2 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
 
   	# https://github.com/cypher/dotfiles/blob/master/gitconfig
-  	amend = commit --amend -C HEAD	
-  	authors = "!git log --pretty=format:%aN | sort | uniq -c | sort -rn"	
-	c = commit
-	ca = commit --amend	
+  	amend = commit --amend -C HEAD
+  	authors = "!git log --pretty=format:%aN | sort | uniq -c | sort -rn"
+	# c = commit
+	ca = commit --amend
 	d = diff
 	dc = diff --cached
 	ds = diff --staged
@@ -32,16 +32,16 @@
 	rb = rebase
 	rba = rebase --abort
 	rbc = rebase --continue
-	rbs = rebase --skip	
+	rbs = rebase --skip
 	wd = diff --word-diff="color"
 	wds = diff --word-diff="color" --staged
-	undo = reset --soft HEAD^	
+	undo = reset --soft HEAD^
 	s = status --short --branch
-	b = branch -vv	
+	b = branch -vv
 	ff = !git fetch && git wtf
 	changes = "!f() { git log --pretty='tformat:%C(yellow)%h{%C(green)%ar{%C(bold blue)%an{%C(red)%d%C(reset) %s' $1..$2 | column -t -s '{'; }; f"
 	branchname = !git branch | grep \"^*\" | awk '{ print $2 }'
-	today = log --stat --since=\"1 Day Ago\" --graph --pretty=oneline --abbrev-commit --date=relative	
+	today = log --stat --since=\"1 Day Ago\" --graph --pretty=oneline --abbrev-commit --date=relative
 [color]
 	branch = auto
 	diff = auto
@@ -70,7 +70,7 @@
 	default = upstream
 [difftool "sourcetree"]
 	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [mergetool "sourcetree"]
 	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
 	trustExitCode = true
