--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,14 @@
 # Autodetect text files
-* text=lf
+* text=auto
 
 *.yml text eol=lf
 *.yaml text eol=lf
 *.md text eol=lf
 *.sh text eol=lf
+*.zsh text eol=lf
+
+.gitattributes text eol=lf
+.zshrc text eol=lf
+
+functions/* text eol=lf
+git-template/* text eol=lf
