style: shell script format

--- a/.editorconfig
+++ b/.editorconfig
@@ -67,6 +67,7 @@ tab_width = 2
 
 # Shell scripts
 # https://google.github.io/styleguide/shell.xml
-[{*.sh,*.zsh}]
+[{*.sh,*.zsh,*.bash}]
 indent_style = space
 indent_size = 2
+tab_width = 2
