--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,11 +10,17 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+
   - repo: https://github.com/bemeurer/beautysh.git
     rev: '4.1'
     hooks:
       - id: beautysh
+
   - repo: https://github.com/openstack-dev/bashate.git
     rev: '0.6.0'
     hooks:
       - id: bashate
+        exclude: >-
+          (?x)^(
+            zsh/colors\.zsh
+          )
