style: exclude zsh/config.zsh

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,5 +22,6 @@ repos:
       - id: bashate
         exclude: >-
           (?x)^(
-            zsh/colors\.zsh
+            zsh/colors\.zsh|
+            zsh/config\.zsh
           )
