style: exclude zsh/completion.zsh

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,5 +23,6 @@ repos:
         exclude: >-
           (?x)^(
             zsh/colors\.zsh|
-            zsh/config\.zsh
+            zsh/config\.zsh|
+            zsh/completion\.zsh
           )
