feat: cleanup .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,7 @@
 	diff = auto
 	interactive = auto
 	status = auto
+
+[merge]
+	# Include summaries of merged commits in newly created merge commit messages
+	log = true
