--- a/.editorconfig
+++ b/.editorconfig
@@ -30,6 +30,7 @@ indent_size = 4
 [Makefile]
 indent_style = tab
 indent_size = 2
+tab_width = 2
 
 # Java
 # https://google.github.io/styleguide/javaguide.html
