style: allow long lines in bash scripts

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,8 @@ repos:
             zsh/config\.zsh|
             zsh/completion\.zsh
           )
+        args: ["-i", "E006"]
+        verbose: false
 
   - repo: https://github.com/Calinou/pre-commit-luacheck
     rev: v1.0.0
