--- a/.gitconfig
+++ b/.gitconfig
@@ -25,3 +25,7 @@
 [merge]
 	# Include summaries of merged commits in newly created merge commit messages
 	log = true
+
+[pull]
+	# Rebase by default
+	rebase = true
