--- a/.editorconfig
+++ b/.editorconfig
@@ -4,88 +4,34 @@
 # it's recommend to keep these unchanged
 end_of_line = lf
 charset = utf-8
+indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
+indent_style = space
 
 # Markdown
 # https://github.com/google/styleguide/blob/gh-pages/docguide/style.md
 [*.md]
 trim_trailing_whitespace = false
-indent_style = space
-indent_size = 2
-
-# Python
-# https://google.github.io/styleguide/pyguide.html
-[*.py]
-indent_style = space
-indent_size = 4
 
 # Vim
 # https://google.github.io/styleguide/vimscriptguide.xml
 [{.vimrc,*.vim}]
-indent_style = space
 indent_size = 4
 
 # Makefile
 [Makefile]
-indent_style = tab
-indent_size = 2
 tab_width = 2
+indent_style = tab
 
-# Java
-# https://google.github.io/styleguide/javaguide.html
-[*.java]
-indent_style = space
-indent_size = 2
-
-# HTML/CSS
-# https://google.github.io/styleguide/htmlcssguide.xml
-[{*.css,*.html}]
-indent_style = space
-indent_size = 2
-
-# Javascript
-# https://google.github.io/styleguide/jsguide.html
-[{*.js}]
-indent_style = space
-indent_size = 2
-
-# JSON
-[*.json]
-indent_style = space
-indent_size = 2
-
-# JSON files without extension
-[.markdownlintrc]
-indent_style = space
-indent_size = 2
-
-# NPM
-[{package,bower}.json]
-indent_style = space
+# zsh scripts
+[{.zshrc,.zshrc.*,*.zsh}]
 indent_size = 4
+shell_variant      = zsh
+switch_case_indent = true
 
-# YAML
-[{*.yml,*yaml}]
-indent_style = space
-indent_size = 2
-
-# YAML files without extension
-[{.ansible-lint,.yamllint}]
-indent_style = space
-indent_size = 2
-
-# Shell configuration
-[{.bashrc,.zshrc,.zshrc.*}]
-indent_style = space
+# bash scripts
+[{.bashrc,*.sh,*.bash}]
 indent_size = 4
-
-# Shell scripts
-[{*.sh,*.zsh,*.bash}]
-indent_style = space
-indent_size = 4
-
-# Dockerfile
-[{Dockerfile,Dockerfile.template}]
-indent_style = space
-indent_size = 2
+shell_variant      = bash
+switch_case_indent = true
