ci: remove luacheck hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,10 +57,10 @@ repos:
             .*\.zsh
           )
 
-  - repo: https://github.com/Calinou/pre-commit-luacheck
-    rev: v1.0.0
-    hooks:
-      - id: luacheck
+  # - repo: https://github.com/Calinou/pre-commit-luacheck
+  #   rev: v1.0.0
+  #   hooks:
+  #     - id: luacheck
 
   - repo: local
     hooks:
