--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,9 @@
 [url "git@github.com:markosamuli"]
 	insteadOf = https://github.com/markosamuli
 
+[url "git@github.com:echo-health"]
+	insteadOf = https://github.com/echo-health
+
 [color]
 	branch = auto
 	diff = auto
