feat: use zoxide

--- a/.config/sheldon/plugins.toml
+++ b/.config/sheldon/plugins.toml
@@ -29,6 +29,9 @@ github = 'sindresorhus/pure'
 
 # last plugins
 
+[plugins.zsh-autosuggestions]
+github = 'zsh-users/zsh-autosuggestions'
+
 [plugins.zsh-syntax-highlighting]
 github = 'zsh-users/zsh-syntax-highlighting'
 
