--- a/.editorconfig
+++ b/.editorconfig
@@ -23,31 +23,38 @@ tab_width = 2
 indent_style = tab
 
 [.zshrc]
-shell_variant      = zsh
+shell_variant = zsh
 switch_case_indent = true
 
 [{.zshrc.*,*.zsh}]
 indent_size = 4
-shell_variant      = zsh
+shell_variant = zsh
 switch_case_indent = true
 
 [.bashrc]
-shell_variant      = bash
+shell_variant = bash
 switch_case_indent = true
 
 [{*.sh,*.bash}]
 indent_size = 4
-shell_variant      = bash
+shell_variant = bash
 switch_case_indent = true
 
 [*.py]
 indent_size = 4
 
 [*.go]
-indent_size = 4
+indent_style = tab
 
 [*.proto]
 indent_size = 2
 
 [*.graphql]
 indent_size = 2
+
+[*.cs]
+indent_size = 4
+indent_style = space
+
+# https://www.jetbrains.com/help/rider/Using_EditorConfig.html
+csharp_space_before_new_parentheses = true
